app/assets/stylesheets/shared/nav.scss
.dsc-main-nav {
  font-family: 'Roboto Slab';
  width: 100%;
  text-align: center;
}

.dsc-main-nav-items {
  padding: 0;
  margin: 0;
}

.dsc-main-nav-item {
  display: inline;
  text-transform: uppercase;

  &:before {
    padding: 0 10px;
    content: '\2022';
    font-size: 19px;
  }

  &:first-of-type:before {
    content: '';
  }
}

.dsc-main-nav-link {
  font-size: 19px;
  color: $white;

  &:hover {
    text-decoration: none;
    color: $color-darker;
  }

  &.active {
    color: $color-darker;
  }
}

.dsc-main-nav-icons-container {
  @include sbu-icon-nav(dsc-search-flag-main, $gray, 50px);
}

.dsc-home-nav-container {
  padding: 50px 0;
  position: relative;

  .dsc-main-nav-link {
    color: $black;
  }

  @media (max-width: 1460px) {
    .dsc-icons-nav {
      top: 90px;
      left: 0;
      width: 500px;
    }
  }
}

.dsc-general-nav-container {
  position: relative;
  padding: 20px 0;
  background-color: $black;
  width: 100%;
  //height: 60px;

  .dsc-main-nav-item:before,
  .dsc-main-nav-item:after {
    color: $white;
  }

  .dsc-icons-nav {
    top: 20px;
  }

  .dsc-nav-header-text {
    position: absolute;
    top: -7px;
    left: 5%;
    color: $white;
    font-size: $sidenav-header-size;
    text-transform: uppercase;

    &:before,
    &:after {
      content: '\2022';
      padding: 0 10px;
      color: $color-lighter;
    }
  }

  @media(max-width: 1460px) {
    .dsc-nav-header-text {
      @include existing-yet-invisible;
    }

    .dsc-main-nav {
      text-align: left;
      padding-left: 20px;
    }
  }
}

// Icons nav
.dsc-nav-clickable-icon {
  cursor: pointer;

  &.active .fa {
    color: $green;
  }
}

.dsc-cart-hidden-content, .dsc-user-hidden-content {
  display: none;
}

.dsc-nav-tooltip-content {
  .dsc-nav-tooltip-numbers {
    font-size: 1.5rem;
    font-weight: bold;
  }

  .dsc-nav-tooltip-link {
    display: block;
    color: $white;
    font-weight: bold;
    margin-top: 10px;
  }
}

